--- a/scss/layouts/_destinationPage.scss
+++ b/scss/layouts/_destinationPage.scss
@@ -168,7 +168,12 @@
       font-size: 15px;
       line-height: 25px;
       color: $lightPurpleColor;
+      margin-inline: 24px;
       margin-bottom: 32px;
+
+      @include mqMinW(375px) {
+        margin-inline: 0;
+      }
 
       @include mqMinW(768px) {
         font-size: 16px;
