--- a/scss/layouts/_homePage.scss
+++ b/scss/layouts/_homePage.scss
@@ -169,7 +169,7 @@
 
 .home-page .text-div {
   max-width: 450px;
-  margin: 0 24px;
+  margin-inline: 24px;
   color: $whiteColor;
   position: absolute;
   top: 112px;
